--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,32 @@
+###服务配置信息；
+########################################################
 server.port = 8081
 server.contextPath=/api
+
+###redis基本配置；
+########################################################
+# REDIS (RedisProperties)
+# Redis数据库索引（默认为0）
+spring.redis.database=16
+# Redis服务器地址
+spring.redis.host=192.168.1.239
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=dailu01
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=0
+spring.redis.pool.testOnBorrow = true
+
+spring.redis.pool.testOnReturn = true
 ##数据库配置文件
 
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
