--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@
 server.port = 8081
 server.contextPath=/api
 
+###日志配置：
+########################################################
+logging.config=classpath:logback.xml
+
+
 ###redis基本配置；
 ########################################################
 # REDIS (RedisProperties)
