--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 ###服务配置信息；
 ########################################################
+spring.application.name=api
 server.port = 8081
 server.contextPath=/api
+eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 
 ###日志配置：
 ########################################################
